# Capstone-Project-Surgical-Robot

./: LICENSE  README.md
Report/: stepping.py
Resources/: AME-COVER.STEP  new_controller.py  new_controller_v2.py
Robot/: Capstone Installs  Launch UR3
Robot Models/: End-Effect-Tool-Extender-KP.SLDPRT  Surgical-Robot-Assembly-KP.SLDASM  Surgical-Robot-Tool-Assembly-Drawing-KP.SLDDRW  Surgical-Robot-Tool-Assembly-KP.SLDASM  Surigical-Robot-Assembly-KP.SLDASM  Surigical-Robot-Tool-Assembly-KP.SLDASM  ~$UR3-Universal-Robots.SLDPRT
robot_end_effector/: End-Effector-Custom-Tool-KP.SLDPRT  Surgical-Robot-Assembly-Drawing-KP.edrw  Surgical-Robot-Assembly-KP.SLDASM  Surgical-Robot-Tool-Assembly-Drawing-KP.edrw
surgical_robot/: CMakeLists.txt
surgical_robot/launch/: surgical_UR3.launch
surgical_robot/models/surgical-patient/: model.config  model.sdf
surgical_robot/models/table-heavy/: model.config  model.sdf
surgical_robot/scripts/: move_robot_arm.py  surgical_robot_controller.py  waypoints
surgical_robot/worlds/: operation_theatre.world
surgical_robot_ws/: Sources and References
surgical_robot_ws/.catkin_tools/profiles/default/: devel_collisions.txt
surgical_robot_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
surgical_robot_ws/logs/surgical_robot/: build.check.011.log.stderr  build.check.012.log.stderr  build.check.014.log.stderr  build.make.011.log.stderr
surgical_robot_ws/src/ur3_ROS/: CMakeLists.txt  blocks_poses.h  blocks_poses_publisher.cpp  package.xml
(+57 files in other folders)
